[package]
name = "moza-rev"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.9"
log = "0.4"
env_logger = "0.11"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
